# stock-explorer

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  main.py  pyproject.toml
config/: config.yaml
docs/: ARCHITECTURE.md  CODE_QUALITY.md
src/stock_explorer/: __init__.py  exceptions.py
src/stock_explorer/backtest/: analyzer.py  engine.py
src/stock_explorer/cli/: commands.py
src/stock_explorer/config/: settings.py
src/stock_explorer/data/: __init__.py  cache.py  fetcher.py  storage.py
src/stock_explorer/logging/: logger.py
src/stock_explorer/monitor/: notifier.py  scanner.py
src/stock_explorer/service/: api.py  manager.py  scheduler.py
src/stock_explorer/signal/: base.py  detectors.py  framework.py  indicators.py  registry.py
src/stock_explorer/utils/: cache_utils.py  data_utils.py
tests/: conftest.py  test_backtest.py  test_config.py  test_data_cache.py  test_data_fetcher.py  test_data_storage.py  test_notifier.py  test_service.py  test_signal.py
